2007-03-29: Paul Varner <fuzzyray@gentoo.org>
	* equery: Convert deprecated strings functions to str methods (Bug
	#172694)

2007-03-25: Paul Varner <fuzzyray@gentoo.org>
	* echangelog: Remove subversion/git patch due to many bugs.

2007-03-18 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Change --no-color to --nocolor for consistency
	within gentoolkit. (Bug #165165)

2007-03-16 Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix typo in package.py (Bug #168347)

2007-03-15 Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix equery check to not fail for symlinks prefixed with ./
	(Bug #170702)

2007-03-14 Paul Varner <fuzzyray@gentoo.org>
	* equery: Trim trailing slash from query for equery belongs command
	(Bug #170981)

2007-03-13 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix bug with --package-names option not rebuilding
	packages (Bug #169761)

2007-03-10 Paul Varner <fuzzyray@gentoo.org>
	* equery: Add --depth option to equery depgraph to limit the depth of
	the dependency graph. (Bug #115807)

2007-03-09 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Add support to detect "no version information
	available" message from ldd (Bug #169973)

2007-03-08 Paul Varner <fuzzyray@gentoo.org>
	* equery: Improved handling of KeyError in equery depends command
	(Bug #169929)

2007-03-07 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Change ordering algorithm to use --deep instead of
	--emptytree on the advice of zmedico

2007-02-26 Marius Mauch <genone@gentoo.org>
	* glsa-check: Display access information in verbose list mode (bug 168482)

2007-02-19 Paul Varner <fuzzyray@gentoo.org>
	* echangelog: Updated to support git and subversion (Bug #136048)

2007-01-10 Paul Varner <fuzzyray@gentoo.org>
	* epkgmove: removed epkgmove command due to popular demand. (Bug
	161360)
	* gensync: Deprecated gensync in favor of app-portage/layman (multiple
	bugs)

2007-01-02 Paul Varner <fuzzyray@gentoo.org>